# mAndroid-Studio

./: .gitignore  LICENSE  README.md  RELEASE.md  TECH_SPEC.md  index.html  package-lock.json  package.json  vitest.config.ts
docs/superpowers/plans/: 2026-06-09-das-implementation.md
src/: App.tsx  LogcatWindow.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: build_parse.rs  device.rs  env_detect.rs  fs_tree.rs  git.rs  gradle.rs  lib.rs  logcat.rs  logcat_parse.rs  main.rs  search.rs  state.rs  variants.rs
src/components/: CodeEditor.tsx  LayoutPreview.test.tsx  LayoutPreview.tsx  cmSearch.ts  completion.ts  editor.tsx  icons.tsx  panels.tsx  searchDialogs.tsx
src/ipc/: device.ts  env.ts  file.ts  fs.ts  git.ts  gradle.ts  logcat.ts  search.ts
src/lib/: androidView.ts  data.ts  engine.ts  searchRegex.ts
src/lib/layoutPreview/: deviceProfiles.test.ts  deviceProfiles.ts  drawables.test.ts  drawables.ts  engine.test.ts  engine.ts  measure.test.ts  measure.ts  parse.test.ts  parse.ts  projectResources.test.ts  projectResources.ts  realfixture.test.ts  resourceLoading.test.ts  resources.test.ts  resources.ts  smoke.test.ts  types.ts  values.refs.test.ts  values.test.ts  values.ts  widgets.test.ts  widgets.ts
src/lib/layoutPreview/layout/: constraint.test.ts  constraint.ts  frame.ts  linear.test.ts  linear.ts  relative.test.ts  relative.ts  scroll.test.ts  scroll.ts  spacing.test.ts  spacing.ts  visibility.test.ts
src/styles/: das.css
